Sat Feb  8 23:40:35 2014  Vit Ondruch  <vondruch@redhat.com>

	* configure.in: add qouting brackets and append wildcard for the
	  rest after target_cpu, to properly detect platform for SSE2
	  instructions.  [ruby-core:60576] [Bug #8358]

Sat Feb  8 21:44:07 2014  Masaki Matsushita  <glass.saga@gmail.com>

	* configure.in: check qsort_r(3) and whether it is GNU version.
	  BSD version has different prototype.

	* util.h: use qsort_r() as ruby_qsort() if it is GNU version.

	* util.c: define ruby_qsort() if needed.

Sat Feb  8 16:34:36 2014  Tanaka Akira  <akr@fsij.org>

	* lib/resolv.rb (Resolv::DNS::Message::MessageDecoder#get_labels):
	  Make it iterative.

Sat Feb  8 15:54:12 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c, gc.h (rb_objspace_marked_object_p): added.
	  This function *ONLY* works just after marking phase,
	  before any sweeping.
	  This function is highly depending current GC implementation
	  and can be removed future version.

Sat Feb  8 15:41:37 2014  Tanaka Akira  <akr@fsij.org>

	* lib/resolv.rb: Don't set CLOEXEC flag explicitly.  (Ruby set it by
	  default.)

Sat Feb  8 15:27:02 2014  Tanaka Akira  <akr@fsij.org>

	* lib/resolv.rb (Resolv::DNS::Message::MessageDecoder): Raise
	  DecodeError if no data before the limit.
	  Reported by Will Bryant.  [ruby-core:60557] [Bug #9498]

Sat Feb  8 15:11:21 2014  Tanaka Akira  <akr@fsij.org>

	* io.c (SMALLBUF): Unused macro removed.

Fri Feb  7 23:37:49 2014  Tanaka Akira  <akr@fsij.org>

	* lib/resolv.rb: Ignore name servers which cause EAFNOSUPPORT on
	  socket creation.
	  Reported by Bjoern Rennhak.  [ruby-core:60442] [Bug #9477]

Fri Feb  7 21:58:48 2014  Zachary Scott  <e@zzak.io>

	* lib/open-uri.rb: [DOC] use lower case version of core classes, same
	  as commit r44878, based on patch by Jonathan Jackson [Bug #9483]

Fri Feb  7 21:54:53 2014  Zachary Scott  <e@zzak.io>

	* ext/ripper/lib/ripper/lexer.rb: [DOC] use lower case version of core